feat(exercises): add create & get exercises routes, controllers and openAPI docs
