# server/src/server.ts
@@ -8,6 +8,7 @@ import authRoutes from './routes/auth.routes';
 import languagesRoutes from './routes/languages.routes';
 import coursesRoutes from './routes/courses.routes';
 import lessonsRoutes from './routes/lessons.routes';
+import exercisesRoutes from './routes/exercises.routes'
 
 // Load environment variables from .env file
 dotenv.config();
@@ -23,10 +24,12 @@ const swaggerDocument = YAML.load('./src/swagger.yaml');
 
 // Endpoints
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+
 app.use('/api', authRoutes);
 app.use('/api/languages', languagesRoutes);
 app.use('/api/courses', coursesRoutes);
 app.use('/api', lessonsRoutes);
+app.use('/api', exercisesRoutes);
 
 async function startServer(){
     try {
